Fixed beta overlapping "toggle userbar" button

--- a/r-admicos.less
+++ b/r-admicos.less
@@ -130,14 +130,11 @@ a[href$="#s"] {
   #userbarToggle {
     background: transparent;
     border-right: 0;
+    left: -12px;
   }
 
-  .user {
+  span {
     color: white;
-
-    a {
-      margin-left: 10px;
-    }
   }
 
   .seperator {
@@ -241,9 +238,14 @@ body {
 }
 
 .res {
-  .beta-link {
-    margin-left: -40px;
-    margin-top: 2px;
+  .beta-hint {
+    left: -35px;
+    top: 5px;
+
+    a {
+      margin-left: 0;
+      width: 10px;
+    }
   }
 
   .entry.RES-keyNav-activeElement {
